<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>botanbot_to_pose_navigator</name>
    <version>0.0.0</version>
    <description>TODO</description>
    <author email="fetualahatas1@gmail.com">Fetullah Atas</author>
    <maintainer email="fetualahatas1@gmail.com">Fetullah Atas</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>tf2_ros</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>